--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ img {
 
 header {
   height: 710px;
-  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("/assets/Welcome-Intro.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("assets/Welcome-Intro.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
