--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ img {
 
 header {
   height: 710px;
-  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("assets/Welcome-Intro.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../assets/Welcome-Intro.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -282,7 +282,7 @@ header nav box-icon {
 }
 
 .service-section .service-widget .service-image-center .service-img {
-  background: url("assets/Our-service-center-image.png");
+  background: url("../assets/Our-service-center-image.png");
   position: relative;
   display: block;
   width: 100%;
