--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ img {
   align-items: center;
   margin: auto;
 }
-
+/* Header */
 header {
   height: 710px;
   background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../assets/Welcome-Intro.jpg");
